# cryptotrader

./: .gitignore  Cargo.toml  README.md
binance-rs/: Cargo.toml
binance-rs/examples/src/: main.rs
binance-rs/src/: account.rs  client.rs  market.rs  model.rs
huobi-rs/: Cargo.toml
huobi-rs/src/: client.rs
okex-rs/: Cargo.toml
okex-rs/src/: client.rs  error.rs  lib.rs  models.rs
src/: exchanges.rs  main.rs
src/exchanges/: binance_api.rs  huobi_api.rs
src/models/: trade_type.rs
src/presenters/: trade_presenter.rs
